--- a/FoursAge/app/src/main/AndroidManifest.xml
+++ b/FoursAge/app/src/main/AndroidManifest.xml
@@ -20,11 +20,16 @@
     <uses-permission android:name="android.permission.VIBRATE" />
     <uses-permission android:name="android.permission.FLASHLIGHT" />
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE"></uses-permission>
-
+    <uses-permission android:name="android.permission.MOUNT_UNMOUNT_FILESYSTEMS"></uses-permission>
     <uses-permission android:name="android.permission.CAMERA" />
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.VIBRATE" />
     <uses-permission android:name="android.permission.FLASHLIGHT" />
+
+    <uses-permission android:name="android.permission.CAMERA"></uses-permission>
+
+    <uses-feature android:name="android.hardware.camera" />
+    <uses-feature android:name="android.hardware.camera.autofocus" />
 
     <application
         android:allowBackup="true"
@@ -51,6 +56,8 @@
 
         <activity android:name=".zxing.android.CaptureActivity"></activity>
         <activity android:name=".zxing.android.PreferencesActivity"></activity>
+
+        <activity android:name=".activity.ChosePictureActivity"></activity>
     </application>
 
 </manifest>
